--- a/vignettes/v6-auditing-data-digit-analysis.Rmd
+++ b/vignettes/v6-auditing-data-digit-analysis.Rmd
@@ -1,12 +1,12 @@
 ---
-title: "Auditing data: Get started"
+title: "Auditing data: Digit analysis"
 author: Koen Derks
 date: "last modified: 05-11-2022"
 output: 
   rmarkdown::html_vignette:
     toc: true
 vignette: >
-  %\VignetteIndexEntry{Auditing data: Get started}
+  %\VignetteIndexEntry{Auditing data: Digit analysis}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteDepends{jfa}
   %\VignetteKeywords{digit, tests, Bayesian}
@@ -18,9 +18,9 @@ vignette: >
 library(jfa)
 ```
 
-# Auditing data: Get started
+# Auditing data: Digit analysis
 
-Welcome to the 'Auditing data' vignette of the `jfa` package. In this vignette you are able to find detailed examples of how you can incorporate the functions provided by the package.
+Welcome to the 'Digit analysis' vignette of the `jfa` package. In this vignette you are able to find detailed examples of how you can incorporate the `data_digit_distribution()` and `data_repeated_values()` functions provided by the package.
 
 ## Function: `data_digit_distribution()`
 
@@ -28,14 +28,18 @@ The function `data_digit_distribution()` takes a vector of numeric values, extra
 
 *Example:*
 
-Benford’s law (Benford, 1938) is a principle that describes a pattern in many naturally-occurring numbers. According to Benford's law, each possible leading digit *d* in a naturally occurring, or non-manipulated, set of numbers occurs with a probability p(d) = log10(1 + 1/d). The distribution of leading digits in a data set of financial transaction values (e.g., the `sinoForest` data) can be extracted and tested against the expected frequencies under Benford's law using the code below.
+Benford’s law (Benford, 1938) is a principle that describes a pattern in many naturally-occurring numbers. According to Benford's law, each possible leading digit *d* in a naturally occurring, or non-manipulated, set of numbers occurs with a probability `p(d) = log10(1 + 1/d)`. The distribution of leading digits in a data set of financial transaction values (e.g., the `sinoForest` data) can be extracted and tested against the expected frequencies under Benford's law using the code below.
 
 ```{r}
 # Frequentist hypothesis test
-data_digit_distribution(sinoForest$value, check = "first", reference = "benford")
+x <- data_digit_distribution(sinoForest$value, check = "first", reference = "benford")
+print(x)
+plot(x)
 
 # Bayesian hypothesis test using default prior
-data_digit_distribution(sinoForest$value, check = "first", reference = "benford", prior = TRUE)
+x <- data_digit_distribution(sinoForest$value, check = "first", reference = "benford", prior = TRUE)
+print(x)
+plot(x)
 ```
 
 ## Function: `data_repeated_values()`
@@ -47,5 +51,7 @@ The function `data_repeated_values()` analyzes the frequency with which values g
 In this example we analyze a data set from a (retracted) paper that describes three experiments run in Chinese factories, where workers were nudged to use more hand-sanitizer. These data were shown to exhibited two classic markers of data tampering: impossibly similar means and the uneven distribution of last digits (Yu, Nelson, & Simohnson, 2018). We can use the `data_repeated_values()` function to test if these data also contain a greater amount of repeated values than expected if the data were not tampered with.
 
 ```{r}
-data_repeated_values(sanitizer$value, check = "lasttwo", B = 2000)
+x <- data_repeated_values(sanitizer$value, check = "lasttwo", B = 2000)
+print(x)
+plot(x)
 ```
