--- a/vignettes/v1-audit-sampling.Rmd
+++ b/vignettes/v1-audit-sampling.Rmd
@@ -14,6 +14,10 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
+```{r, echo = FALSE}
+library(jfa)
+```
+
 Welcome to the 'Audit sampling' page of the `jfa` package. Here you can find a simple explanation of the functions in the package that facilitate the statistical audit sampling workflow. Specifically, these functions implement standard audit sampling techniques to calculate sample sizes, select items from a population, and evaluate misstatement in a data sample. The `jfa` package enables users to create a prior probability distribution to perform Bayesian audit sampling using these functions. For more detailed explanations of each function, read the other vignettes on the [package website](https://koenderks.github.io/jfa).
 
 ## 1. Cheat sheet
